# sewing-pattern-editor

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Gopkg.toml  Makefile  README.md  app.html  app.js  build.sh  copy_assets.sh  debug.sh  default.nix  design-system.html  elm-application.json  elm-srcs.nix  elm.js  elm.json  index.html  index.js  main.css  manifest.webmanifest  mix.exs  package.json  preview.sh  register-service-worker.js  run-server.cabal  server.go  server.js  service-worker.js  sewing-pattern-editor.nix  shell.nix  transform.js
.github/workflows/: deploy.yml
assets/: app.html  app.js  default.nix  design-system.js  elm-application.json  elm.json  main.css  package-lock.json  package.json  register-service-worker--no-op.js  service-worker.js  stories.html  unbuffered-elm  webpack.config.js
assets/css/: app.css
backend/: default.nix  run-server.cabal  run-server.nix
config/: config.exs  test.exs
frontend/: default.nix  stories.nix
hub/: .gitignore  README.md  mix.exs
js-aruco/: posit1.js
lib/: hub.ex  hub_web.ex
scripts/: build.sh  copy_assets.sh  debug.sh  preview.sh
server/: main.go
src/: Api.elm  Design.elm  DesignSystem.elm  Detail2d.elm  Detail3d.elm  Dialog.elm  Elements.elm  Expr.elm  Git.elm  Github.elm  Header.elm  LocalStorage.elm  Main.elm  Measurements.elm  Pattern.elm  Port.elm  Ports.elm  Route.elm  Session.elm  Sidebar.elm  StateResult.elm  Store.elm  StoredPattern.elm  That.elm  Those.elm  Triple.elm  Ui.elm  Worker.elm  index.html
static/: index.html
test/: test_helper.exs
tests/: ExprTest.elm
(+183 files in other folders)
