Name: run-server
Version: 1.0.0

Synopsis:
  Server for the sewing pattern editor

Description:
  Server for the sewing pattern editor

Homepage: https://sewing-pattern-editor.herokuapp.com

License: AGPL-3
License-file: LICENSE

Author:     Fabian Kirchner
Maintainer: kirchner@posteo.de
Copyright:  Copyright (c) 2020-present Fabian Kirchner

Stability: Experimental
Category: Web

Build-type: Simple
Cabal-version: >=1.2

Executable run-server
  hs-source-dirs:
    src/backend/

  main-is:
    Main.hs

  Build-depends:
    aeson,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    cmdargs,
    http-client,
    http-client-tls,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.2,
    unordered-containers

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
